--- a/package/Config.in
+++ b/package/Config.in
@@ -54,6 +54,7 @@ endmenu
 menu "Debugging, profiling and benchmark"
 	source "package/bonnie/Config.in"
 	source "package/cache-calibrator/Config.in"
+	source "package/cukinia/Config.in"
 	source "package/dhrystone/Config.in"
 	source "package/dmalloc/Config.in"
 	source "package/dropwatch/Config.in"
