altera_sockit: add mkpimage
The altera needs a signed image in order to boot.

Add backport support and activate mkpimage to generate a
signature for the altera board.

This backport come from buildroot
af31c309e73ca88ee70c52e591f90e4b89ff5e55

Issue: #1644
Change-Id: I8a2072957bbca02c719d1ea1a82083db5b9d8a42

--- a/configs/altera_sockit_defconfig
+++ b/configs/altera_sockit_defconfig
@@ -34,4 +34,4 @@ BR2_TARGET_UBOOT_CUSTOM_REPO_VERSION="rel_acds13.0sp1"
 BR2_TARGET_UBOOT_CUSTOM_PATCH_DIR="board/altera/sockit"
 BR2_TARGET_UBOOT_FORMAT_IMG=y
 BR2_TARGET_UBOOT_SPL=y
-BR2_TARGET_UBOOT_SPL_NAME="spl/u-boot-spl.bin"
+BR2_PACKAGE_HOST_MKPIMAGE=y
