--- a/configs/altera_sockit_defconfig
+++ b/configs/altera_sockit_defconfig
@@ -34,4 +34,7 @@ BR2_TARGET_UBOOT_CUSTOM_REPO_VERSION="rel_acds13.0sp1"
 BR2_TARGET_UBOOT_CUSTOM_PATCH_DIR="board/altera/sockit"
 BR2_TARGET_UBOOT_FORMAT_IMG=y
 BR2_TARGET_UBOOT_SPL=y
+BR2_PACKAGE_HOST_DOSFSTOOLS=y
+BR2_PACKAGE_HOST_GENIMAGE=y
 BR2_PACKAGE_HOST_MKPIMAGE=y
+BR2_PACKAGE_HOST_MTOOLS=y
